# DLX-

./: .gitignore  AAAI.ipynb  C++.ipynb  CMakeLists.txt  CODE_APPENDIX.md  CP_SAT_results.csv  CP_SAT_results_timelimit.csv  DATA_APPENDIX.md  DLX_LP_results.csv  DLX_ML_features.csv  DLX_ML_results.csv  DLX_results.csv  DLX_speedup_over_CPSAT_10_threads.csv  DLXv1_results.csv  DLXv1_results1.csv  DLXv2_results.csv  DLXv2_results1.csv  Experiment  Experiment.py  Gurobi_objective_relative_to_DLX.csv  Gurobi_results.csv  Gurobi_results_timelimit.csv  Makefile  OR_TOOLS_results.csv  OR_TOOLS_results_timelimit.csv  README.md  Untitled.ipynb  cpsat_spk.cpp  cpsat_spk.hpp  dlx_experiment.cpp  dlx_experiment.py  functions  functions.py  functions1.py  gurobi_spk.cpp  gurobi_spk.hpp  optimized_dlx.py  requirements.txt
.ipynb_checkpoints/: Experiment-checkpoint  Untitled-checkpoint.ipynb
Data/Beam Candidate/: Allocate_12_1000_60_4_sample0.txt  Allocate_12_1000_60_4_sample1.txt  Allocate_12_1000_60_4_sample10.txt  Allocate_12_1000_60_4_sample11.txt  Allocate_12_1000_60_4_sample12.txt  Allocate_12_1000_60_4_sample13.txt  Allocate_12_1000_60_4_sample14.txt  Allocate_12_1000_60_4_sample15.txt  Allocate_12_1000_60_4_sample16.txt  Allocate_12_1000_60_4_sample17.txt  Allocate_12_1000_60_4_sample18.txt  Allocate_12_1000_60_4_sample19.txt  (+295 more)
parallelisation_results/: DLX_parallelisation_all_results.csv  DLX_parallelisation_average_gaps.csv  DLX_parallelisation_average_speedups.csv  DLX_parallelisation_speedup_table.tex  DLX_parallelisation_speedups_all.csv  DLX_parallelisation_table.tex
(+177 files in other folders)
